grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        // Block constructs (no period needed for the wrapper)
        $._block_statement,
        // Regular period-terminated statements
        seq($._statement_body, "."),
        // Chained statements: KEYWORD: item1, item2.
        $.chained_statement,
      ),

    _identifier_chars: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    identifier: ($) =>
      choice($._identifier_chars, $.namespace_identifier),

    field_symbol: (_$) => /<[a-zA-Z_][a-zA-Z0-9_]*>/,

    // =========================================================================
    // Literals
    // =========================================================================

    integer_literal: (_$) => /\d+/,
    number_literal: ($) => choice($.integer_literal, $.float_literal),

    string_literal: (_$) =>
      token(seq("'", repeat(choice(/[^'\n]/, "''")), "'")),

    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.field_symbol,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.component_access,
        $.method_call_expression,
        $.dynamic_reference,
        $.table_expression,
        $.new_expression,
        $.value_expression,
        $.ref_expression,
        $.conv_expression,
        $.cast_expression,
        $.exact_expression,
        $.corresponding_expression,
        $.cond_expression,
        $.switch_expression,
        $.filter_expression,
        $.reduce_expression,
        $.inline_data_declaration,
        $.inline_field_symbol,
        $.predicate_expression,
      ),

    binary_expression: ($) =>
      choice(
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("MOD"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("DIV"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.CONCAT, seq($._expression, "&&", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, kw("BIT-AND"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-OR"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-XOR"), $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, $._comparison_operator, $._expression)),
        prec.left(PREC.AND, seq($._expression, kw("AND"), $._expression)),
        prec.left(PREC.OR, seq($._expression, kw("OR"), $._expression)),
        prec.left(PREC.EQUIV, seq($._expression, kw("EQUIV"), $._expression)),
      ),

    _comparison_operator: (_$) =>
      choice(
        "=", "<>", "<", ">", "<=", ">=",
        kw("EQ"), kw("NE"), kw("LT"), kw("GT"), kw("LE"), kw("GE"),
        kw("CO"), kw("CN"), kw("CA"), kw("CS"),
        kw("NA"), kw("NS"), kw("CP"), kw("NP"),
      ),

    component_access: ($) =>
      prec.left(PREC.MEMBER, seq(
        $._expression,
        choice("->", "=>", "~"),
        choice($.identifier, $.dynamic_reference),
      )),

    named_argument: ($) => seq($.identifier, "=", $._expression),

    predicate_expression: ($) =>
      prec.left(PREC.COMPARE, choice(
        seq($._expression, kw("IS"), kw("INITIAL")),
        seq($._expression, kw("IS"), kw("NOT"), kw("INITIAL")),
        seq($._expression, kw("IS"), kw("ASSIGNED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("ASSIGNED")),
        seq($._expression, kw("IS"), kw("BOUND")),
        seq($._expression, kw("IS"), kw("NOT"), kw("BOUND")),
        seq($._expression, kw("IS"), kw("SUPPLIED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("SUPPLIED")),
        seq($._expression, kw("IS"), kw("REQUESTED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("REQUESTED")),
        seq($._expression, kw("IS"), kw("INSTANCE"), kw("OF"), $._expression),
        seq($._expression, kw("BETWEEN"), $._expression, kw("AND"), $._expression),
        seq($._expression, kw("IS"), kw("NOT"), kw("INSTANCE"), kw("OF"), $._expression),
        seq($._expression, kw("NOT"), kw("BETWEEN"), $._expression, kw("AND"), $._expression),
      )),

    // =========================================================================
    // Constructor expressions (7.40+)
    // =========================================================================

    report_statement: ($) =>
      seq(kw("REPORT"), optional($.identifier), repeat($._report_addition)),

    _report_addition: ($) =>
      choice(
        seq(kw("NO"), kwSeq("STANDARD PAGE"), kw("HEADING")),
        seq(kwSeq("LINE-SIZE"), $.integer_literal),
        seq(kwSeq("LINE-COUNT"), $.integer_literal, optional(seq("(", $.integer_literal, ")"))),
        seq(kwSeq("MESSAGE-ID"), $.identifier),
      ),

    program_statement: ($) => seq(kw("PROGRAM"), optional($.identifier)),

    function_pool_statement: ($) =>
      seq(kwSeq("FUNCTION-POOL"), $.identifier, optional(seq(kwSeq("MESSAGE-ID"), $.identifier))),

    include_statement: ($) =>
      seq(kw("INCLUDE"), $.identifier, optional(kwSeq("IF FOUND"))),

    // =========================================================================
    // Phase 2: Type specifications
    // =========================================================================

    _type_spec: ($) =>
      choice(
        seq(kw("TYPE"), $._type_expression),
        seq(kw("LIKE"), $._type_expression),
        seq(kw("TYPE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("LIKE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("TYPE"), $._table_type),
        seq(kw("LIKE"), $._table_type),
        seq(kw("TYPE"), kw("RANGE"), kw("OF"), $._type_expression),
        seq(kw("TYPE"), kw("LINE"), kw("OF"), $._type_expression),
      ),

    _type_expression: ($) =>
      choice(
        $.identifier,
        $._builtin_type,
        $.component_access,
      ),

    parameters_statement: ($) =>
      seq(kw("PARAMETERS"), $.identifier, optional($._type_spec), repeat($._parameter_additions)),

    _parameter_additions: ($) =>
      choice(
        seq(kw("DEFAULT"), $._expression),
        kw("OBLIGATORY"),
        seq(kw("LOWER"), kw("CASE")),
        kwSeq("AS CHECKBOX"),
        seq(kwSeq("RADIOBUTTON GROUP"), $.identifier),
        seq(kw("MATCHCODE"), kw("OBJECT"), $.identifier),
        seq(kw("MODIF"), kw("ID"), $.identifier),
        seq(kw("MEMORY"), kw("ID"), $.identifier),
        kwSeq("NO-DISPLAY"),
        seq(kw("VALUE"), kw("CHECK")),
        kw("AS LISTBOX"),
      ),

    select_options_statement: ($) =>
      seq(kwSeq("SELECT-OPTIONS"), $.identifier,
        kw("FOR"), $._expression,
        repeat($._select_option_additions)),

    _select_option_additions: ($) =>
      choice(
        seq(kw("DEFAULT"), $._expression, optional(seq(kw("TO"), $._expression)),
          optional(seq(kw("OPTION"), $.identifier)),
          optional(seq(kw("SIGN"), $.identifier))),
        kwSeq("NO-DISPLAY"),
        kwSeq("NO-EXTENSION"),
        kwSeq("NO INTERVALS"),
        kw("OBLIGATORY"),
        seq(kw("LOWER"), kw("CASE")),
        seq(kw("MODIF"), kw("ID"), $.identifier),
        seq(kw("MEMORY"), kw("ID"), $.identifier),
        seq(kw("MATCHCODE"), kw("OBJECT"), $.identifier),
      ),

    // =========================================================================
    // Phase 2: TABLES, TYPE-POOLS, INCLUDE TYPE/STRUCTURE
    // =========================================================================

    tables_statement: ($) =>
      seq(kw("TABLES"), $.identifier),

    type_pools_statement: ($) =>
      seq(kwSeq("TYPE-POOLS"), $.identifier),

    _form_parameter_section: ($) =>
      choice(
        seq(kw("USING"), repeat1($._form_param)),
        seq(kw("CHANGING"), repeat1($._form_param)),
        seq(kw("TABLES"), repeat1($._form_param)),
      ),

    if_statement: ($) =>
      seq(
        kw("IF"), $._expression, ".",
        repeat($._statement),
        repeat($.elseif_clause),
        optional($.else_clause),
        kw("ENDIF"), ".",
      ),

    raise_statement: ($) =>
      choice(
        seq(kw("RAISE"), kw("EXCEPTION"), kw("TYPE"), $._type_expression,
          repeat(seq(kw("EXPORTING"), repeat1($.named_argument)))),
        seq(kw("RAISE"), kw("EXCEPTION"), $._expression),
        seq(kw("RAISE"), kw("SHORTDUMP"), kw("TYPE"), $._type_expression),
        seq(kw("RAISE"), $.identifier),
      ),

    raise_event_statement: ($) =>
      seq(kw("RAISE"), kw("EVENT"), $.identifier,
        optional(seq(kw("EXPORTING"), repeat1($.named_argument)))),

    // =========================================================================
    // Phase 4: CALL METHOD / FUNCTION / PERFORM
    // =========================================================================

    perform_statement: ($) =>
      seq(kw("PERFORM"), $._expression,
        optional(seq(kw("IN"), kw("PROGRAM"), $._expression)),
        optional(kwSeq("IF FOUND")),
        repeat($._form_parameter_section)),

    submit_statement: ($) =>
      seq(kw("SUBMIT"), $._expression,
        repeat($._submit_addition)),

    _submit_addition: ($) =>
      choice(
        kwSeq("VIA SELECTION-SCREEN"),
        kwSeq("AND RETURN"),
        seq(kw("WITH"), $.identifier, choice(
          seq("=", $._expression),
          seq(kw("IN"), $._expression),
          seq(kw("NOT"), kw("IN"), $._expression),
          seq(kw("BETWEEN"), $._expression, kw("AND"), $._expression),
          seq(kwSeq("NOT BETWEEN"), $._expression, kw("AND"), $._expression),
        )),
        seq(kw("USING"), kwSeq("SELECTION-SET"), $._expression),
        seq(kw("TO"), kwSeq("SAP-SPOOL")),
        seq(kwSeq("SPOOL PARAMETERS"), $._expression),
        seq(kw("EXPORTING"), kwSeq("LIST TO MEMORY")),
      ),

    exit_statement: (_$) => kw("EXIT"),
    read_table_statement: ($) =>
      seq(kwSeq("READ TABLE"), $._expression,
        repeat($._read_table_addition)),

    _read_table_addition: ($) =>
      choice(
        seq(kw("INTO"), $._expression),
        seq(kw("ASSIGNING"), choice($.field_symbol, $.inline_field_symbol)),
        seq(kwSeq("REFERENCE INTO"), $._expression),
        kwSeq("TRANSPORTING NO FIELDS"),
        seq(kw("INDEX"), $._expression),
        seq(kwSeq("WITH KEY"), repeat1(choice(
          seq($.identifier, "=", $._expression),
          $._expression,
        ))),
        seq(kwSeq("WITH TABLE KEY"), repeat1(seq($.identifier, "=", $._expression))),
        seq(kw("USING"), kw("KEY"), $.identifier),
        seq(kwSeq("BINARY SEARCH")),
        seq(kw("TRANSPORTING"), repeat1($.identifier)),
        seq(kw("COMPARING"), choice(repeat1($.identifier), kw("ALL"), kw("FIELDS"))),
      ),

    insert_statement: ($) =>
      choice(
        seq(kw("INSERT"), $._expression, kw("INTO"),
          optional(kw("TABLE")), $._expression,
          repeat($._table_modify_addition)),
        seq(kw("INSERT"), kwSeq("LINES OF"), $._expression,
          optional(seq(kw("FROM"), $._expression, optional(seq(kw("TO"), $._expression)))),
          kw("INTO"), optional(kw("TABLE")), $._expression,
          optional(seq(kw("INDEX"), $._expression))),
        seq(kw("INSERT"), kw("INITIAL"), kw("LINE"), kw("INTO"),
          optional(kw("TABLE")), $._expression,
          repeat($._table_modify_addition)),
      ),

    append_statement: ($) =>
      choice(
        seq(kw("APPEND"), $._expression, kw("TO"), $._expression,
          repeat($._table_modify_addition)),
        seq(kw("APPEND"), kwSeq("LINES OF"), $._expression, kw("TO"), $._expression),
        seq(kw("APPEND"), kw("INITIAL"), kw("LINE"), kw("TO"), $._expression,
          repeat($._table_modify_addition)),
      ),

    modify_table_statement: ($) =>
      seq(kw("MODIFY"), optional(kw("TABLE")), $._expression,
        repeat($._table_modify_addition)),

    _table_modify_addition: ($) =>
      choice(
        seq(kw("INDEX"), $._expression),
        seq(kw("FROM"), $._expression),
        seq(kw("TRANSPORTING"), repeat1($.identifier)),
        seq(kw("ASSIGNING"), choice($.field_symbol, $.inline_field_symbol)),
        seq(kwSeq("REFERENCE INTO"), $._expression),
        seq(kw("WHERE"), $._expression),
        seq(kw("USING"), kw("KEY"), $.identifier),
      ),

    delete_statement: ($) =>
      choice(
        seq(kw("DELETE"), optional(kw("TABLE")), $._expression,
          repeat($._table_modify_addition)),
        seq(kw("DELETE"), $._expression, kw("WHERE"), $._expression),
        seq(kw("DELETE"), kwSeq("ADJACENT DUPLICATES"), kw("FROM"), $._expression,
          optional(seq(kw("COMPARING"), choice(repeat1($.identifier), kw("ALL"), kw("FIELDS"))))),
      ),

    sort_statement: ($) =>
      seq(kw("SORT"), $._expression,
        repeat(choice(
          seq(kw("BY"), repeat1(seq($._expression, optional(choice(kw("ASCENDING"), kw("DESCENDING")))))),
          kw("ASCENDING"),
          kw("DESCENDING"),
          kw("STABLE"),
          kwSeq("AS TEXT"),
        ))),

    collect_statement: ($) =>
      seq(kw("COLLECT"), $._expression, kw("INTO"), $._expression),

    describe_table_statement: ($) =>
      seq(kwSeq("DESCRIBE TABLE"), $._expression,
        repeat(choice(
          seq(kw("LINES"), $._expression),
          seq(kw("KIND"), $._expression),
        ))),

    // =========================================================================
    // Phase 5: String operations
    // =========================================================================

    concatenate_statement: ($) =>
      seq(kw("CONCATENATE"), repeat1($._expression),
        kw("INTO"), $._expression,
        optional(seq(kwSeq("SEPARATED BY"), $._expression)),
        optional(kwSeq("RESPECTING BLANKS"))),

    split_statement: ($) =>
      seq(kw("SPLIT"), $._expression, kw("AT"), $._expression,
        kw("INTO"), choice(
          seq(kw("TABLE"), $._expression),
          repeat1($._expression),
        )),

    find_statement: ($) =>
      seq(kw("FIND"), optional(choice(kw("FIRST"), kw("ALL"))),
        optional(kw("OCCURRENCES")), optional(kw("OF")),
        optional(choice(kw("REGEX"), kw("SUBSTRING"))),
        $._expression, kw("IN"), optional(kw("TABLE")), $._expression,
        repeat($._find_replace_addition)),

    replace_statement: ($) =>
      seq(kw("REPLACE"),
        optional(choice(kw("FIRST"), kw("ALL"))),
        optional(kw("OCCURRENCES")), optional(kw("OF")),
        optional(choice(kw("REGEX"), kw("SUBSTRING"))),
        $._expression, kw("IN"), optional(kw("TABLE")), $._expression,
        kw("WITH"), $._expression,
        repeat($._find_replace_addition)),

    _find_replace_addition: ($) =>
      choice(
        seq(kw("MATCH"), kw("OFFSET"), $._expression),
        seq(kw("MATCH"), kw("LENGTH"), $._expression),
        seq(kw("MATCH"), kw("COUNT"), $._expression),
        seq(kw("RESULTS"), $._expression),
        seq(kw("SUBMATCHES"), repeat1($._expression)),
        kwSeq("IGNORING CASE"),
        kwSeq("RESPECTING CASE"),
        seq(kw("IN"), kwSeq("BYTE MODE")),
        seq(kw("IN"), kwSeq("CHARACTER MODE")),
        seq(kw("SECTION"), kw("OFFSET"), $._expression, kw("LENGTH"), $._expression),
      ),

    condense_statement: ($) =>
      seq(kw("CONDENSE"), $._expression,
        optional(kwSeq("NO-GAPS"))),

    translate_statement: ($) =>
      seq(kw("TRANSLATE"), $._expression,
        kw("TO"), choice(kw("UPPER"), kw("LOWER")), kw("CASE")),

    overlay_statement: ($) =>
      seq(kw("OVERLAY"), $._expression, kw("WITH"), $._expression,
        optional(seq(kw("ONLY"), $._expression))),

    // =========================================================================
    // Phase 6: Selection screen
    // =========================================================================
