test/corpus/perform_statement.txt
================================================================================
Simple PERFORM
================================================================================
PERFORM my_form.
--------------------------------------------------------------------------------

(source_file
  (perform_statement
    (identifier)))

================================================================================
PERFORM with USING
================================================================================
PERFORM calculate USING lv_input.
--------------------------------------------------------------------------------

(source_file
  (perform_statement
    (identifier)
    (identifier)))

================================================================================
PERFORM with USING and CHANGING
================================================================================
PERFORM process USING lv_input CHANGING lv_output.
--------------------------------------------------------------------------------

(source_file
  (perform_statement
    (identifier)
    (identifier)
    (identifier)))

================================================================================
PERFORM IN PROGRAM
================================================================================
PERFORM my_form IN PROGRAM zprogram.
--------------------------------------------------------------------------------

(source_file
  (perform_statement
    (identifier)
    (identifier)))

================================================================================
PERFORM IF FOUND
================================================================================
PERFORM my_form IF FOUND.
--------------------------------------------------------------------------------

(source_file
  (perform_statement
    (identifier)))
