test/corpus/predicate_expressions.txt
================================================================================
IS INITIAL
================================================================================
IF lv_val IS INITIAL.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier))))

================================================================================
IS NOT INITIAL
================================================================================
IF lv_val IS NOT INITIAL.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier))))

================================================================================
IS ASSIGNED
================================================================================
IF <ls_data> IS ASSIGNED.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (field_symbol))))

================================================================================
IS BOUND
================================================================================
IF lo_ref IS BOUND.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier))))

================================================================================
IS SUPPLIED
================================================================================
IF iv_name IS SUPPLIED.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier))))

================================================================================
IS INSTANCE OF
================================================================================
IF lo_obj IS INSTANCE OF zcl_test.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier)
      (identifier))))

================================================================================
BETWEEN
================================================================================
IF lv_val BETWEEN 1 AND 100.
ENDIF.
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (predicate_expression
      (identifier)
      (number_literal
        (integer_literal))
      (number_literal
        (integer_literal)))))
