test/corpus/program_introductions.txt
================================================================================
REPORT simple
================================================================================
REPORT ztest.
--------------------------------------------------------------------------------

(source_file
  (report_statement
    (identifier)))

================================================================================
REPORT with LINE-SIZE
================================================================================
REPORT ztest LINE-SIZE 132.
--------------------------------------------------------------------------------

(source_file
  (report_statement
    (identifier)
    (integer_literal)))

================================================================================
PROGRAM statement
================================================================================
PROGRAM ztest.
--------------------------------------------------------------------------------

(source_file
  (program_statement
    (identifier)))

================================================================================
FUNCTION-POOL
================================================================================
FUNCTION-POOL zfg_test.
--------------------------------------------------------------------------------

(source_file
  (function_pool_statement
    (identifier)))

================================================================================
INCLUDE statement
================================================================================
INCLUDE ztest_include.
--------------------------------------------------------------------------------

(source_file
  (include_statement
    (identifier)))

================================================================================
INCLUDE IF FOUND
================================================================================
INCLUDE ztest_include IF FOUND.
--------------------------------------------------------------------------------

(source_file
  (include_statement
    (identifier)))

================================================================================
TABLES statement
================================================================================
TABLES mara.
--------------------------------------------------------------------------------

(source_file
  (tables_statement
    (identifier)))

================================================================================
TYPE-POOLS
================================================================================
TYPE-POOLS abap.
--------------------------------------------------------------------------------

(source_file
  (type_pools_statement
    (identifier)))
