test/corpus/raise_statement.txt
================================================================================
RAISE EXCEPTION TYPE
================================================================================
RAISE EXCEPTION TYPE cx_sy_conversion_error.
--------------------------------------------------------------------------------

(source_file
  (raise_statement
    (identifier)))

================================================================================
RAISE EXCEPTION TYPE with EXPORTING
================================================================================
RAISE EXCEPTION TYPE cx_error EXPORTING iv_msg = lv_msg.
--------------------------------------------------------------------------------

(source_file
  (raise_statement
    (identifier)
    (named_argument
      (identifier)
      (identifier))))

================================================================================
RAISE EXCEPTION object
================================================================================
RAISE EXCEPTION lx_error.
--------------------------------------------------------------------------------

(source_file
  (raise_statement
    (identifier)))

================================================================================
RAISE classic exception
================================================================================
RAISE not_found.
--------------------------------------------------------------------------------

(source_file
  (raise_statement
    (identifier)))

================================================================================
RAISE EVENT
================================================================================
RAISE EVENT data_changed EXPORTING ev_data = lv_data.
--------------------------------------------------------------------------------

(source_file
  (raise_event_statement
    (identifier)
    (named_argument
      (identifier)
      (identifier))))
