test/corpus/report_statement.txt
================================================================================
Simple report
================================================================================
REPORT ztest.
--------------------------------------------------------------------------------

(source_file
  (report_statement
    (identifier)))

================================================================================
Report with additions
================================================================================
REPORT ztest LINE-SIZE 80 MESSAGE-ID zmsg.
--------------------------------------------------------------------------------

(source_file
  (report_statement
    (identifier)
    (integer_literal)
    (identifier)))
