test/corpus/set_get_parameter.txt
================================================================================
SET PARAMETER
================================================================================
SET PARAMETER ID 'MAT' FIELD lv_matnr.
--------------------------------------------------------------------------------

(source_file
  (set_parameter_statement
    (string_literal)
    (identifier)))

================================================================================
GET PARAMETER
================================================================================
GET PARAMETER ID 'MAT' FIELD lv_matnr.
--------------------------------------------------------------------------------

(source_file
  (get_parameter_statement
    (string_literal)
    (identifier)))
