test/corpus/set_pf_status.txt
================================================================================
SET PF-STATUS
================================================================================
SET PF-STATUS 'STATUS_100'.
--------------------------------------------------------------------------------

(source_file
  (set_pf_status_statement
    (string_literal)))

================================================================================
SET TITLEBAR
================================================================================
SET TITLEBAR 'TITLE_100'.
--------------------------------------------------------------------------------

(source_file
  (set_titlebar_statement
    (string_literal)))

================================================================================
SET TITLEBAR with substitution
================================================================================
SET TITLEBAR 'TITLE' WITH lv_name.
--------------------------------------------------------------------------------

(source_file
  (set_titlebar_statement
    (string_literal)
    (identifier)))

================================================================================
SET SCREEN
================================================================================
SET SCREEN 200.
--------------------------------------------------------------------------------

(source_file
  (set_screen_statement
    (number_literal
      (integer_literal))))
