test/corpus/sql_statements.txt
================================================================================
SELECT SINGLE with INTO
================================================================================
SELECT SINGLE matnr FROM mara INTO lv_matnr WHERE matnr = lv_input.
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
SELECT with comma-separated fields
================================================================================
SELECT matnr, maktx FROM makt INTO TABLE lt_result WHERE spras = 'E'.
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (binary_expression
      (identifier)
      (string_literal))))

================================================================================
SELECT DISTINCT
================================================================================
SELECT DISTINCT werks FROM marc INTO TABLE lt_plants.
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)
    (identifier)))

================================================================================
SELECT with ORDER BY
================================================================================
SELECT matnr FROM mara INTO TABLE lt_result ORDER BY matnr ASCENDING.
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
SELECT with UP TO ROWS
================================================================================
SELECT matnr FROM mara INTO TABLE lt_result UP TO 10 ROWS.
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)
    (identifier)
    (number_literal
      (integer_literal))))

================================================================================
SELECT loop (ENDSELECT)
================================================================================
SELECT matnr FROM mara INTO lv_matnr.
  EXIT.
ENDSELECT.
--------------------------------------------------------------------------------

(source_file
  (select_loop_statement
    (identifier)
    (identifier)
    (identifier)
    (exit_statement)))

================================================================================
INSERT into DB
================================================================================
INSERT INTO mara VALUES ls_mara.
--------------------------------------------------------------------------------

(source_file
  (insert_db_statement
    (identifier)
    (identifier)))

================================================================================
UPDATE DB with SET
================================================================================
UPDATE mara SET mtart = 'FERT' WHERE matnr = lv_matnr.
--------------------------------------------------------------------------------

(source_file
  (update_db_statement
    (identifier)
    (identifier)
    (string_literal)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
DELETE FROM DB
================================================================================
DELETE FROM mara WHERE matnr = lv_matnr.
--------------------------------------------------------------------------------

(source_file
  (delete_db_statement
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
COMMIT WORK
================================================================================
COMMIT WORK.
--------------------------------------------------------------------------------

(source_file
  (commit_statement))

================================================================================
COMMIT WORK AND WAIT
================================================================================
COMMIT WORK AND WAIT.
--------------------------------------------------------------------------------

(source_file
  (commit_statement))

================================================================================
ROLLBACK WORK
================================================================================
ROLLBACK WORK.
--------------------------------------------------------------------------------

(source_file
  (rollback_statement))
