test/corpus/string_operations.txt
================================================================================
CONCATENATE basic
================================================================================
CONCATENATE lv_first lv_second INTO lv_result.
--------------------------------------------------------------------------------

(source_file
  (concatenate_statement
    (identifier)
    (identifier)
    (identifier)))

================================================================================
CONCATENATE with separator
================================================================================
CONCATENATE lv_a lv_b lv_c INTO lv_result SEPARATED BY ','.
--------------------------------------------------------------------------------

(source_file
  (concatenate_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (string_literal)))

================================================================================
SPLIT string
================================================================================
SPLIT lv_text AT ',' INTO lv_a lv_b lv_c.
--------------------------------------------------------------------------------

(source_file
  (split_statement
    (identifier)
    (string_literal)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
SPLIT into table
================================================================================
SPLIT lv_text AT ',' INTO TABLE lt_parts.
--------------------------------------------------------------------------------

(source_file
  (split_statement
    (identifier)
    (string_literal)
    (identifier)))

================================================================================
FIND in string
================================================================================
FIND 'abc' IN lv_text MATCH OFFSET lv_off MATCH LENGTH lv_len.
--------------------------------------------------------------------------------

(source_file
  (find_statement
    (string_literal)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
REPLACE in string
================================================================================
REPLACE ALL OCCURRENCES OF 'old' IN lv_text WITH 'new'.
--------------------------------------------------------------------------------

(source_file
  (replace_statement
    (string_literal)
    (identifier)
    (string_literal)))

================================================================================
CONDENSE
================================================================================
CONDENSE lv_text NO-GAPS.
--------------------------------------------------------------------------------

(source_file
  (condense_statement
    (identifier)))

================================================================================
TRANSLATE to upper case
================================================================================
TRANSLATE lv_text TO UPPER CASE.
--------------------------------------------------------------------------------

(source_file
  (translate_statement
    (identifier)))

================================================================================
SHIFT left
================================================================================
SHIFT lv_text LEFT BY 3 PLACES.
--------------------------------------------------------------------------------

(source_file
  (shift_statement
    (binary_expression
      (identifier)
      (identifier))
    (number_literal
      (integer_literal))))

================================================================================
OVERLAY
================================================================================
OVERLAY lv_text WITH lv_mask.
--------------------------------------------------------------------------------

(source_file
  (overlay_statement
    (identifier)
    (identifier)))
