test/corpus/submit_statement.txt
================================================================================
Simple SUBMIT
================================================================================
SUBMIT zprogram.
--------------------------------------------------------------------------------

(source_file
  (submit_statement
    (identifier)))

================================================================================
SUBMIT AND RETURN
================================================================================
SUBMIT zprogram AND RETURN.
--------------------------------------------------------------------------------

(source_file
  (submit_statement
    (identifier)))

================================================================================
SUBMIT VIA SELECTION-SCREEN
================================================================================
SUBMIT zprogram VIA SELECTION-SCREEN AND RETURN.
--------------------------------------------------------------------------------

(source_file
  (submit_statement
    (identifier)))

================================================================================
SUBMIT with selection
================================================================================
SUBMIT zprogram WITH p_name = 'test' AND RETURN.
--------------------------------------------------------------------------------

(source_file
  (submit_statement
    (identifier)
    (identifier)
    (string_literal)))
