test/corpus/table_operations.txt
================================================================================
READ TABLE with index
================================================================================
READ TABLE lt_data INDEX 1 INTO ls_data.
--------------------------------------------------------------------------------

(source_file
  (read_table_statement
    (identifier)
    (number_literal
      (integer_literal))
    (identifier)))

================================================================================
READ TABLE with key
================================================================================
READ TABLE lt_data WITH KEY name = 'test' INTO ls_data.
--------------------------------------------------------------------------------

(source_file
  (read_table_statement
    (identifier)
    (identifier)
    (string_literal)
    (identifier)))

================================================================================
READ TABLE with BINARY SEARCH
================================================================================
READ TABLE lt_data WITH KEY name = lv_name INTO ls_data BINARY SEARCH.
--------------------------------------------------------------------------------

(source_file
  (read_table_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
INSERT into table
================================================================================
INSERT ls_data INTO TABLE lt_data.
--------------------------------------------------------------------------------

(source_file
  (insert_statement
    (identifier)
    (identifier)))

================================================================================
INSERT lines of
================================================================================
INSERT LINES OF lt_source INTO TABLE lt_target.
--------------------------------------------------------------------------------

(source_file
  (insert_statement
    (identifier)
    (identifier)))

================================================================================
APPEND to table
================================================================================
APPEND ls_data TO lt_data.
--------------------------------------------------------------------------------

(source_file
  (append_statement
    (identifier)
    (identifier)))

================================================================================
APPEND initial line
================================================================================
APPEND INITIAL LINE TO lt_data ASSIGNING <ls_data>.
--------------------------------------------------------------------------------

(source_file
  (append_statement
    (identifier)
    (field_symbol)))

================================================================================
MODIFY table
================================================================================
MODIFY lt_data FROM ls_data INDEX 1.
--------------------------------------------------------------------------------

(source_file
  (modify_table_statement
    (identifier)
    (identifier)
    (number_literal
      (integer_literal))))

================================================================================
DELETE table entry
================================================================================
DELETE TABLE lt_data FROM ls_data.
--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (identifier)
    (identifier)))
